--- a/environment.yml
+++ b/environment.yml
@@ -1,118 +1,92 @@
-name: python35
+name: eyc
 channels:
 - defaults
 dependencies:
-- asn1crypto=0.22.0=py35h0d675fe_1
-- bleach=2.0.0=py35h055c768_0
 - ca-certificates=2017.08.26=h1d4fec5_0
-- certifi=2017.7.27.1=py35h19f42a1_0
-- cffi=1.10.0=py35h796c292_1
-- chardet=3.0.4=py35hb6e9ddf_1
-- cryptography=2.0.3=py35hef72dfd_1
-- cycler=0.10.0=py35hc4d5149_0
-- dbus=1.10.22=h3b5a359_0
-- decorator=4.1.2=py35h3a268aa_0
-- entrypoints=0.2.3=py35h48174a2_2
-- expat=2.2.5=he0dffb1_0
-- fontconfig=2.12.4=h88586e7_1
+- certifi=2017.11.5=py35h9749603_0
+- cffi=1.11.2=py35hc7b2db7_0
+- cudatoolkit=8.0=3
+- cudnn=7.0.5=cuda8.0_0
 - freetype=2.8=hab7d2ae_1
-- glib=2.53.6=h5d9569c_2
-- gmp=6.1.2=h6c8ec71_1
-- gst-plugins-base=1.12.2=he3457e5_0
-- gstreamer=1.12.2=h4f93127_0
-- h5py=2.7.0=py35h41d5d6e_1
-- hdf5=1.10.1=hb0523eb_0
-- html5lib=0.999999999=py35h0543385_0
-- icu=58.2=h211956c_0
-- idna=2.6=py35h8605a33_1
-- intel-openmp=2018.0.0=h15fc484_7
-- ipykernel=4.6.1=py35h29d130c_0
-- ipython=6.1.0=py35h1b71439_1
-- ipython_genutils=0.2.0=py35hc9e07d0_0
-- ipywidgets=7.0.0=py35h8ebd919_0
-- jedi=0.10.2=py35hc33c70f_0
-- jinja2=2.9.6=py35h90b8645_1
+- intel-openmp=2018.0.0=hc7b2577_8
 - jpeg=9b=h024ee3a_2
-- jsonschema=2.6.0=py35h4395190_0
-- jupyter=1.0.0=py35hd38625c_0
-- jupyter_client=5.1.0=py35h2bff583_0
-- jupyter_console=5.2.0=py35h4044a63_1
-- jupyter_core=4.3.0=py35he2f7985_0
 - libedit=3.1=heed3624_0
 - libffi=3.2.1=hd88cf55_4
 - libgcc-ng=7.2.0=h7cc24e2_2
 - libgfortran-ng=7.2.0=h9f7466a_2
-- libpng=1.6.32=hda9c8bc_2
-- libsodium=1.0.13=h31c71d8_2
+- libpng=1.6.32=hbd3595f_4
 - libstdcxx-ng=7.2.0=h7a57d05_2
-- libtiff=4.0.8=h90200ff_9
-- libxcb=1.12=h84ff03f_3
-- libxml2=2.9.4=h6b072ca_5
-- markupsafe=1.0=py35h4f4fcf6_1
-- matplotlib=2.1.0=py35h2cbf27e_0
-- mistune=0.8.1=py35h9251d8c_0
-- mkl=2018.0.0=hb491cac_4
-- nbconvert=5.3.1=py35hc5194e3_0
-- nbformat=4.4.0=py35h12e6e07_0
+- libtiff=4.0.9=h28f6b97_0
+- mkl=2018.0.1=h19d6760_4
+- nccl=1.3.4=cuda8.0_1
 - ncurses=6.0=h9df7e31_2
-- notebook=5.2.1=py35h35fdc29_0
 - numpy=1.13.3=py35hd829ed6_0
 - olefile=0.44=py35h2c86149_0
-- openssl=1.0.2m=h26d622b_1
-- pandas=0.21.0=py35hee8c687_1
-- pandoc=1.19.2.1=hea2e7c5_1
-- pandocfilters=1.4.2=py35h1565a15_1
-- pcre=8.41=hc27e229_1
-- pexpect=4.2.1=py35h8b56cb4_0
-- pickleshare=0.7.4=py35hd57304d_0
-- pillow=4.2.1=py35h03abc04_0
+- openssl=1.0.2n=hb7f436b_0
+- pillow=4.3.0=py35h550890c_1
 - pip=9.0.1=py35h7e7da9d_4
-- prompt_toolkit=1.0.15=py35hc09de7a_0
-- ptyprocess=0.5.2=py35h38ce0a3_0
 - pycparser=2.18=py35h61b3040_1
-- pygments=2.2.0=py35h0f41973_0
-- pyopenssl=17.2.0=py35h1d2a76c_0
-- pyparsing=2.2.0=py35h041ed72_1
-- pyqt=5.6.0=py35h0e41ada_5
-- pysocks=1.6.7=py35h6aefbb0_1
-- python=3.5.4=h56e0582_23
-- python-dateutil=2.6.1=py35h90d5b31_1
-- pytz=2017.2=py35h9225bff_1
-- pyzmq=16.0.2=py35h4be1f71_2
-- qt=5.6.2=h974d657_12
-- qtconsole=4.3.1=py35h4626a06_0
+- python=3.5.4=h417fded_24
+- pytorch=0.3.0=py35cuda8.0cudnn7.0_0
 - readline=7.0=ha6073c6_4
-- requests=2.18.4=py35hb9e6ad1_1
 - scikit-learn=0.19.1=py35hbf1f462_0
 - scipy=1.0.0=py35hcbbe4a2_0
 - setuptools=36.5.0=py35ha8c1747_0
-- simplegeneric=0.8.1=py35h2ec4104_0
-- sip=4.18.1=py35h9eaea60_2
 - six=1.11.0=py35h423b573_1
 - sqlite=3.20.1=hb898158_2
-- terminado=0.6=py35hce234ed_0
-- testpath=0.3.1=py35had42eaf_0
 - tk=8.6.7=hc745277_3
-- tornado=4.5.2=py35hf879e1d_0
-- traitlets=4.3.2=py35ha522a97_0
-- urllib3=1.22=py35h2ab6e29_0
-- wcwidth=0.1.7=py35hcd08066_0
-- webencodings=0.5.1=py35hb6cf162_1
-- wheel=0.29.0=py35h601ca99_1
-- widgetsnbextension=3.0.2=py35h0be620c_1
+- torchvision=0.2.0=py35_0
+- wheel=0.30.0=py35hd3883cf_1
 - xz=5.2.3=h55aa19d_2
-- zeromq=4.2.2=hbedb6e5_2
 - zlib=1.2.11=ha838bed_2
 - pip:
-  - backports.weakref==1.0rc1
+  - augmentor==0.1.10
+  - click==6.7
+  - cycler==0.10.0
+  - entrypoints==0.2.3
+  - flask==0.12.2
+  - future==0.16.0
+  - greenlet==0.4.12
+  - ipykernel==4.6.1
+  - ipython==6.1.0
   - ipython-genutils==0.2.0
+  - ipywidgets==6.0.0
+  - itsdangerous==0.24
+  - jedi==0.10.2
+  - jinja2==2.9.6
+  - jsonschema==2.6.0
+  - jupyter==1.0.0
   - jupyter-client==5.1.0
   - jupyter-console==5.1.0
   - jupyter-core==4.3.0
-  - markdown==2.2.0
-  - prompt-toolkit==1.0.15
-  - protobuf==3.4.0
-  - tensorflow==1.2.0
-  - werkzeug==0.12.2
-prefix: /home/kbstudios/anaconda3/envs/python35
+  - markupsafe==1.0
+  - matplotlib==2.1.1
+  - mistune==0.7.4
+  - msgpack-python==0.4.8
+  - nbconvert==5.2.1
+  - nbformat==4.3.0
+  - neovim==0.2.0
+  - notebook==5.0.0
+  - pexpect==4.2.1
+  - pickleshare==0.7.4
+  - ptyprocess==0.5.2
+  - pygments==2.2.0
+  - pyparsing==2.2.0
+  - python-dateutil==2.6.1
+  - pytz==2017.3
+  - pyyaml==3.12
+  - pyzmq==16.0.2
+  - qtconsole==4.3.0
+  - simplegeneric==0.8.1
+  - terminado==0.6
+  - testpath==0.3.1
+  - torch==0.3.0.post4
+  - tornado==4.5.1
+  - tqdm==4.19.5
+  - traitlets==4.3.2
+  - wcwidth==0.1.7
+  - webencodings==0.5.1
+  - werkzeug==0.14.1
+  - widgetsnbextension==2.0.0
+prefix: /home/kbstudios/anaconda3/envs/eyc
 
