--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,5 @@ main/models
 eycdata/
 __pycache__/
 225-images/
-main/app/model_duplicate_post\.pt
-
-main/app/model_duplicate_pre\.pt
 generated/
+static/
